style.css
body {
    background-color: #064789;
    color: white;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    font-family: Verdana;
}

h1 {
    font-size: 2rem;
    text-align: center;
}

.info {
    background-color: #d7263d;
    height: 30%;
    width: 40%;
    text-align: center;
    padding: 20px;
    border-radius: 15px;
    margin: 30px;
}

.body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.cricket {
    height: auto;
    width: 500px;
}

.footer {
    display: flex;
    justify-content: center;
    font-size: 24px;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 3rem;
    margin: 0;
    background-color: #333333;
    color: #dee4e7;
    padding-bottom: 10px;
    z-index: 1000;
}

.github-link {
    color: #dee4e7;
    font-size: 22px;
    transition: all .2s ease-in-out;
    margin-left: 5px;
}

.github-link:hover {
    transform: scale(1.2);
    color: firebrick;
}

